# norma-ai-agent-platform

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/versions/: 20260718_0006_workflow_progress.py  20260718_0007_projects_and_spaces.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  memory.py  rag_assistant.py  research.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: __init__.py  document_models.py  memory_models.py  models.py  project_models.py  session.py  workflow_models.py
backend/app/memory/: __init__.py  manager.py
backend/app/rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
backend/app/schemas/: __init__.py  assistant.py  health.py  integrations.py  knowledge.py  projects.py  workflows.py
backend/app/services/: __init__.py  auth.py  github.py  knowledge.py  launch_strategy.py  llm.py  memory.py  projects.py  queue.py  readiness.py
docker/: backend.Dockerfile
docs/: README.md  agents.md  api.md  architecture.md  deployment.md  development.md  memory.md  rag.md  roadmap.md  walkthrough.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
tests/: test_assistant_api.py  test_github_integration.py  test_health.py  test_knowledge_api.py  test_knowledge_service.py  test_launch_strategy.py  test_memory_agent.py  test_projects_api.py  test_rag_assistant.py  test_web_search.py  test_workflows_api.py
(+25 files in other folders)
