[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "norma-ai"
version = "0.1.0"
description = "The AI Operating System for Knowledge and Execution"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg",
    "fastapi",
    "langchain",
    "langgraph",
    "openai",
    "pydantic",
    "pydantic-settings",
    "qdrant-client",
    "redis",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
